# dude-chess

./: .env.example  .gitignore  .opvars  README.md  REPO_BRIEF.md  SCHEDULING.md  convert_logs.py  dude-agent.service  flake.nix  heavy.js  lichess-check.service  lichess-check.timer  notify.js  package-lock.json  package.json  pyproject.toml  tasks.md  test_audit.js
.github/workflows/: deploy.yml
.pi/skills/agent-logs/: SKILL.md
.pi/skills/deployment/: SKILL.md
.pi/skills/github-cli/: SKILL.md
.pi/skills/pi-web-browse/: SKILL.md  package-lock.json
blog/: 2024-04-28-PTe5a2Mw.md  2026-04-26-TG6WIl2G.md  2026-04-27-OU7A4p0u.md  README.md  index.html
docs/: README.md  _config.yml  index.html
docs/_layouts/: post.html
docs/_posts/: 2024-04-28-PTe5a2Mw.md  2026-04-11-GMpnvx3e.md  2026-04-12-qR4nnL9t.md  2026-04-26-TG6WIl2G.md
dude/src/: index.js  scheduler.js
src/: agent.acceptance.test.js  audit.js  blog-manager.js  daily-check.js  download-board.js  fetch-game-pgn.js  heavy-task.test.js  index.js  index.test.js  lichess.js  scheduler.js  scheduler.test.js  sessions.js  sessions.test.js
src/dude/: agent.py  label_studio_converter.py  main.py  models.py  orchestrator_agent.py
src/dude/agents/: __init__.py  coder.py  orchestrator.py  planner.py  token_optimizer.py
src/utils/: notifications.js
test/: scheduler-quota-test.js
